--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/Levels/Default.Default
+EditorStartupMap=/Game/Levels/Default.Default
 GlobalDefaultGameMode=/Game/Blueprints/GameModeBP.GameModeBP_C
-
-[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_11
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -12,13 +9,6 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.RendererSettings]
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
-
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/GameJam")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDown",NewGameName="/Script/GameJam")
-+ActiveClassRedirects=(OldClassName="TP_TopDownGameMode",NewClassName="GameJamGameMode")
-+ActiveClassRedirects=(OldClassName="TP_TopDownPlayerController",NewClassName="GameJamPlayerController")
-+ActiveClassRedirects=(OldClassName="TP_TopDownCharacter",NewClassName="GameJamCharacter")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
