Added global var for feathers found

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/Default.Default
 GlobalDefaultGameMode=/Game/Blueprints/GameModeBP.GameModeBP_C
+GameInstanceClass=/Game/Blueprints/FallenGame.FallenGame_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
